Adds photos for all celebrities and properly hides and shows each of them when new information is provided.

--- a/index.html
+++ b/index.html
@@ -30,15 +30,37 @@
         <button type="submit" class="btn">Show me my celebrity date!</button>
       </form>
       <div class="celebrityOptions">
-        <div id="donaldTrump">
+        <div id="donaldTrump" class="celeb">
           <p>Donald Trump is a megacelebrity and somehow President of the United States.</p>
           <img src="http://inthesetimes.com/images/articles/trump_flicker_face_yess.jpg" alt="image of Donald Trump">
         </div>
-        <div id="morganFreeman">
-
+        <div id="morganFreeman" class="celeb">
+          <p>Morgan Freeman is a god, at least in some of his films, and is quite an eligible bachelor.</p>
+          <img src="https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_80%2Cw_300/MTQyNjgwMDQ0NjE4MTMwNzU4/gettyimages-503700338jpg.jpg" alt="image of Morgan Freeman">
         </div>
-        <div id="celeb3">
-
+        <div id="joaquinPhoenix" class="celeb">
+          <p>Joaquin Phoenix is a true wildchild that never takes an acting role that will be easy for him.</p>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Joaquin_Phoenix_Cannes_2017.jpg" alt="Photo of Joaquin Phoenix">
+        </div>
+        <div id="kanyeWest" class="celeb">
+          <p>Kanye West is one of the most famous people in the world. What's not to like?</p>
+          <img src="https://img.discogs.com/5uOWbJbLH6nIkZWGUDVT0R1Awew=/fit-in/300x300/filters:strip_icc():format(jpeg):mode_rgb():quality(40)/discogs-images/A-137880-1490504884-5963.jpeg.jpg" alt="Photo of Kanye West">
+        </div>
+        <div id="merylStreep" class="celeb">
+          <p>Meryl Streep is one of the most accomplished actresses of all time, and she's looking for love!</p>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Meryl_Streep_by_Jack_Mitchell.jpg/220px-Meryl_Streep_by_Jack_Mitchell.jpg" alt="Photo of Meryl Streep">
+        </div>
+        <div id="judiDench" class="celeb">
+          <p>Judi Dench, 007's keeper, is on the market and as wild as ever!</p>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Judi_Dench_at_the_BAFTAs_2007.jpg" alt="Photo of Judi Dench">
+        </div>
+        <div id="selenaGomez" class="celeb">
+          <p>Selena Gomez is a huge rising star and certainly a handful! Take her out at your own risk!</p>
+          <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjAwNTE2MDMyMl5BMl5BanBnXkFtZTgwMjAyODM3MTI@._V1_UY317_CR12,0,214,317_AL_.jpg" alt="Photo of Selena Gomez">
+        </div>
+        <div id="kristenStewart" class="celeb">
+          <p>Kristen Steward, famous for her role in the massive Twilight series, is looking for love - perhaps you'll be chosen!</p>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Kristen_Stewart_Cannes_2014.jpg" alt="Photo of Kristen Stewart">
         </div>
       </div>
       </div>
